# EC-Based-Color-Correction

./: CMakeLists.txt  README.md  main.cpp  utili.cpp  utili.h
dataset/01/correspondence/: 00__01_inliers.csv  01__00_inliers.csv  01__02_inliers.csv  02__01_inliers.csv  02__03_inliers.csv  03__02_inliers.csv  03__04_inliers.csv  04__03_inliers.csv  04__05_inliers.csv  05__04_inliers.csv  05__06_inliers.csv  06__05_inliers.csv  06__07_inliers.csv  07__06_inliers.csv
